# Apollo-backend

./: .gitignore  Apollo  CMakeLists.txt  TODO.txt  email.txt  includes.h  m.txt  main.cpp  readme.md  test.csv
Dataset/: data.csv  quad.cpp  quadratic.csv  regression-data.csv  regression-data.csv.bak  regression-data1.csv  regression-data1.csv.bak  sampleCircle.csv  script.py  winequality-red.csv
Layers/: Dense.cpp  Dense.h  Layer.cpp  Layer.h  Relu.cpp  Relu.h  Sigmoid.cpp  Sigmoid.h  Softmax.cpp  Softmax.h
Loss/: Loss.cpp  Loss.h
Model/: Model.cpp  Model.h
Models/: model1.csv  spam-100-531.csv  spam-100.csv  spam-1000.csv  spam-test.csv  spam.csv  test.csv  testRegression.csv
Preprocessing/: Preprocessing.cpp  Preprocessing.h
Preprocessing/files/: demoWords.csv  words.csv
SpamDetector/: SpamDetector.cpp  SpamDetector.h  main.cpp
Tests/: SigmoidTest.cpp  Tests.cpp  Tests.h  main.cpp
Utils/: Dataloader.cpp  Dataloader.h  linalg.cpp  linalg.h
